<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragments.SearchFragment">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/colorPrimaryDark">
        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:id="@+id/searchView"
            app:iconifiedByDefault="false"
            app:searchHintIcon="@null"
            app:queryHint="Search..."
            android:focusable="false"
            android:background="@null"
            app:closeIcon="@drawable/baseline_clear_24"
            app:searchIcon="@drawable/ic_search"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/searchView"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="55dp"/>

    </RelativeLayout>
</FrameLayout>